[tool.poetry]
name = "topic-modeling"
version = "0.1.0"
description = ""
authors = ["vladyslav.fliahin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numba = "^0.61.0"
bertopic = "^0.16.4"
numpy = "2.1"
openai = "^1.61.1"
tiktoken = "^0.8.0"
matplotlib = "^3.10.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
